test/error/CMakeFiles/error_atomics_gpu_8_bit.dir/depend.make
# Empty dependencies file for error_atomics_gpu_8_bit.
# This may be replaced when dependencies are built.
